fixed label menu overflowing windows y axis

--- a/src/index.sass
+++ b/src/index.sass
@@ -385,7 +385,6 @@ h3
   border-radius: 3px
   width: 304px
   position: absolute
-  top: 1px
   left: 260px
   z-index: 10
   padding: 12px
@@ -510,7 +509,10 @@ h3
     ul
       padding: 0
       list-style: none
+      max-height: 212px
+      overflow-y: auto
       li
+        
         display: flex
         align-items: center
         .edit-button
